[package]
name = "ostring_auth"
version = "1.1.1"
edition = "2021"
authors = ["weak_cat"]
description = "A license authentication module"
license = "MIT"
repository = "https://github.com/Weakcat/ostring_auth.git"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
soft-aes = "0.2.2"
crc = "3.0"

[target.'cfg(windows)'.dependencies]
wmi = "0.14.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"