[package]
name = "ostring_auth"
version = "1.1.2"
edition = "2021"
authors = ["weak_cat"]
description = "A license authentication module"
license = "MIT"
repository = "https://github.com/Weakcat/ostring_auth.git"

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
chrono = "0.4.39"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
uuid = { version = "1.14.0", features = ["v4"] }
soft-aes = "0.2.2"
crc = "3.2.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.15.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.14.0", features = ["v4"] }
base64 = "0.22.1"